# python-fastapi-demo

./: README.md
with-poetry/: Dockerfile  README.md  docker-compose-local.yml  docker-compose-prod.yml  main.py  pyproject.toml  requirements.txt
without-poetry/: Dockerfile
