[tool.poetry]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = ["zama <zamamb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
requests = "^2.24.0"
uvicorn = "^0.12.2"
SQLAlchemy = "^1.3.20"
databases = "^0.4.0"
asyncpg = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
